# CPP-Computacional-Geometry-Algorithms

./: .gitignore  CMakeLists.txt  input.txt  input3.txt  out.csv
Test/LineIntersection/: input2.txt
Test/Triangulation/: input1.txt  input2.txt  input3.txt  input4.txt
lib/: CMakeLists.txt
lib/GeoAlgorithms/: CMakeLists.txt
lib/GeoAlgorithms/include/convexHull/: divideConvexHull.hxx  innocentConvexHull.hxx  iterativeConvexHull.hxx
lib/GeoAlgorithms/include/lineIntersect/: lineIntersect.hxx
lib/GeoAlgorithms/include/triangulation/: monotone.hxx
lib/GeoAlgorithms/include/typedef/: types.hxx
lib/GeoAlgorithms/include/utils/: utils.hxx
lib/GeoAlgorithms/src/convexHull/: divideConvexHull.cxx  innocentConvexHull.cxx  iterativeConvexHull.cxx
lib/GeoAlgorithms/src/lineIntersect/: lineIntersect.cxx
lib/GeoAlgorithms/src/triangulation/: monotone.cxx
lib/GeoAlgorithms/src/utils/: utils.cxx
src/: CMakeLists.txt
src/ConvexHull/: main.cxx
src/LineIntersection/: main.cxx
src/RandomPoints/: main.cxx
src/Triangulation/: main.cxx
